--- a/.github/workflows/DemoTest.yml
+++ b/.github/workflows/DemoTest.yml
@@ -1,13 +1,40 @@
-name: Browser SetUp Test
+name: Browser Setup Test
 
 on:
   repository_dispatch:
-    types: Sample
-
+    types: browserSetUpTest
   workflow_dispatch:
+    inputs:
+      browser:
+        type: choice
+        description: Which browser to test
+        required: true
+        default: chrome
+        options:
+          - chrome
+          - firefox
+          - edge
+      env:
+        type: choice
+        description: Which environment to test
+        required: true
+        default: dev
+        options:
+          - qa
+          - uat
+          - dev
+      platform:
+        type: choice
+        description: Which platform to test
+        required: true
+        default: mac
+        options:
+          - windows
+          - mac
+          - linux
 
 jobs:
-  test:
+  selenium_test:
     runs-on: ubuntu-latest
 
     steps:
@@ -15,26 +42,37 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'temurin'
-          cache: maven
 
-      - name: Install dependencies
+      - name: Install Maven
         run: |
-          sudo apt-get update
-          sudo apt-get install ca-certificates fonts-liberation libappindicator3-1 libasound2 libatk-bridge2.0-0 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgbm1 libgcc1 libglib2.0-0 libgtk-3-0 libnspr4 libnss3 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 lsb-release wget xdg-utils -y
+          sudo apt update
+          sudo apt install maven -y
 
-      - uses: browser-actions/setup-chrome@latest
-        with:
-          install-dependencies: true
+      - name: Parameters
+        run: |
+          echo "Params are Params are Browser=${{github.event.inputs.browser}} Env=${{github.event.inputs.env}} Platform=${{github.event.inputs.platform}}"      
 
+      - name: Install Google Chrome
+        run: |
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo apt install ./google-chrome-stable_current_amd64.deb -y
+          google-chrome --version
+          Xvfb :99 -ac -screen 0 1280x1024x24 & 
+          export DISPLAY=:99
 
-      - name: Build and Test
+      - name: Build
         run: |
           mvn clean install -Dmaven.test.skip=true -Dskipjar=true
-          mvn test -Dtest=selenium.ExampleTest
+
+      - name: Test
+        run: |
+          export DISPLAY=:99
+          mvn -X test -Dtest=com.test.automation.BrowserSetupTest
+
 
       - uses: actions/upload-artifact@v3
         if: always()
