--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           sudo chmod +x /usr/local/bin/jq
 
           # Convert YAML to JSON and then to a single line
-          build_spec_content=$(yq eval -j '.' scripts/commonBuildSpec.yml)
+          build_spec_content=$(yq eval -o=json '.' scripts/commonBuildSpec.yml | jq -c '.')
 
           # Debug: Print content to check for issues
           echo "build_spec_content: $build_spec_content"
